フッターリンク集の大枠完成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -562,11 +562,15 @@
 					<li><a href="">海外在住の方</a></li>
 					<li><a href="#n_header_bottom"><img src="./image/pagetop.png" class="pagetop"></li>
 				</ul>
+			</nav>
 
 		<!--*** リンクのまとめ***-->
-			<div class="footer_l_block">
+		<div id="footer_links">
+			<nav class="footer_l_block">
 				<ul class="list_link">
-					<li><a href=""><span class="ap_font">アドバンスト プログラム</span><br><span class="first_child">Advanced Program</span></a></li>
+					<ruby>
+					<li><a href=""><rt>アドバンスト プログラム</rt>Advanced Program</a></li>
+					</ruby>
 					<li><a href="">N予備校システム</a></li>
 					<li><a href="">大学受験</a></li>
 					<li><a href="">dwango×プログラミング</a></li>
@@ -583,15 +587,94 @@
 					<li><a href="">N高起業部</a></li>
 					<li><a href="">海外大学国際教育プログラム</a></li>
 				</ul>
-			</div>
-
-
-
-
-
-
 			</nav>
 
+			<nav class="footer_l_block">
+				<ul class="list_link">
+					<li><a href=""><span class="first_child">N高について</span></a></li>
+					<li><a href="">5分で分かるN高</a></li>
+					<li><a href="">高卒資格取得について</a></li>
+					<li><a href="">スクーリング</a></li>
+					<li><a href="">ITツール</a></li>
+					<li><a href="">イベント・学校行事</a></li>
+					<li><a href="">在校生の声</a></li>
+					<li><a href="">保護者の声</a></li>
+					<li><a href="">学校関係者・著名人からのメッセージ</a></li>
+					<li><a href="">制服紹介</a></li>
+					<li><a href="">キャンパス</a></li>
+					<li><a href="">動画一覧</a></li>
+					<li><a href="">校歌</a></li>
+					<li><a href="">学費</a></li>
+					<li><a href="">N STANDARDS</a></li>
+					<li><a href="">生徒の進路・活動実績・アンケート調査</a></li>
+				</ul>
+			</nav>
+
+			<nav class="footer_l_block">
+				<ul class="list_link">
+					<li><a href=""><span class="first_child">ネットコース</span></a></li>
+					<li><a href="">ネット学習</a></li>
+					<li><a href="">ネットコース特進コース</a></li>
+					<li><a href="">担当サポート</a></li>
+					<li><a href="">ネット部活</a></li>
+					<li><a href="">ネットコース生の1日</a></li>
+					<li><a href="">学費(ネットコース)</a></li>
+				</ul>
+			</nav>
+
+			<nav class="footer_l_block">
+				<ul class="list_link">
+					<li><a href=""><span class="first_child">通学コース</span></a></li>
+					<li><a href="">本科クラス</a></li>
+					<li><a href="">プログラミング クラス</a></li>
+					<li><a href="">英進館 クラス</a></li>
+					<li><a href="">カリキュラム</a></li>
+					<li><a href="">ネット学習(通学コース)</a></li>
+					<li><a href="">プロジェクトN</a></li>
+					<li><a href="">大学受験</a></li>
+					<li><a href="">プログラミング</a></li>
+					<li><a href="">外国語</a></li>
+					<li><a href="">中国復習授業</a></li>
+					<li><a href="">学びコーチング</a></li>
+					<li><a href="">担当サポート(通学コース)</a></li>
+					<li><a href="">キャンパスサークル</a></li>
+					<li><a href="">イベント・学校行事</a></li>
+					<li><a href="">教材</a></li>
+					<li><a href="">通学コース生の一日</a></li>
+					<li><a href="">通学キャンパス</a></li>
+					<li><a href="">学費(通学コース)</a></li>
+					<li><a href="">学生寮</a></li>
+				</ul>
+			</nav>
+
+			<nav class="footer_l_block">
+				<ul class="list_link">
+					<li><a href=""><span class="first_child">提携スクール</span></a></li>
+					<li><a href="">スタンフォード大学</a></li>
+					<li><a href="">オックスフォード</a></li>
+					<li><a href="">バンタンマイセレクトコース</a></li>
+					<li><a href="">バンタン高等学院</a></li>
+					<li><a href="">ASO高等部</a></li>
+					<li><a href="">入学案内</a></li>
+					<li><a href="">WEB出願</a></li>
+					<li><a href="">キャンパス</a></li>
+					<li><a href="">ニュース・トピックス</a></li>
+					<li><a href="">N高ブログ</a></li>
+					<li><a href="">提携実績</a></li>
+					<li><a href="">書籍紹介</a></li>
+					<li><a href="">よくある質問</a></li>
+					<li><a href="">通信制高校について</a></li>
+					<li><a href="">特別奨学生募集</a></li>
+					<li><a href="">教職員採用</a></li>
+					<li><a href="">お問い合わせ</a></li>
+					<li><a href="">報道関係者の方へ</a></li>
+					<li><a href="">インターンシップ</a></li>
+					<li><a href="">卒業された方へ</a></li>
+				</ul>
+			</nav>
+
+
+		</div>
 
 		</footer>
 
