・最後列のリスト 下線を作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -643,7 +643,7 @@
 					<li><a href="">通学コース生の一日</a></li>
 					<li><a href="">通学キャンパス</a></li>
 					<li><a href="">学費(通学コース)</a></li>
-					<li><a href="">学生寮</a></li>
+					<li><a href="">学生寮</a></lis>
 				</ul>
 			</nav>
 
@@ -655,6 +655,8 @@
 					<li><a href="">バンタンマイセレクトコース</a></li>
 					<li><a href="">バンタン高等学院</a></li>
 					<li><a href="">ASO高等部</a></li>
+				</ul>
+				<ul class="list_link_lastrow">
 					<li><a href="">入学案内</a></li>
 					<li><a href="">WEB出願</a></li>
 					<li><a href="">キャンパス</a></li>
