スペルミスの修正 ・youtubeのスペルを1箇所間違えていた

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -527,11 +527,11 @@
 			<div class="one_block">
 				<div class="youtube_info">
 					<iframe width="343" height="193" src="https://www.youtube.com/embed/xhOsnY-k8JM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p class="yotube_title">N高等学校校歌「代数Nの方程式」</p>
+					<p class="youtube_title">N高等学校校歌「代数Nの方程式」</p>
 				</div>
 				<div class="youtube_info">
 					<iframe width="343" height="193" src="https://www.youtube.com/embed/wLR5QLGtylA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p class="youtube_title">N高等学校の学習・活動実績(2016年4月開校~)</p>
+					<p class="youtube_title">N高等学校の学習・活動実績(2016年4月開校〜)</p>
 				</div>
 			</div>
 		</section>
