フッターのSNSリンクを作成中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -674,9 +674,21 @@
 					<li><a href="">卒業された方へ</a></li>
 				</ul>
 			</nav>
-
-
 		</div>
+
+		<!--*** フッターのSNSリンク***-->
+			<div id="footer_sns_links">
+				<ul class="footer_lastlink">
+					<li><a href="">個人情報保護方針</a></li>
+					<li><a href="">学校法人概要</a></li>
+				</ul>
+
+				<ul class="sns_links">
+					<a href="" class="icon_a"><li><img src="./image/n_twitter.png" class="icon"><span class="sns_text">N高等学校公式<br>twitter</span></li></a>
+					<a href="" class="icon_a"><li><img src="./image/n_facebook.png" class="icon"><span class="sns_text">N高等学校公式<br>facebook</span></li></a>
+					<a href="" class="icon_a"><li><img src="./image/n_youtube.png" class="icon"><span class="sns_text">N高等学校公式<br>YouTubeチャンネル</span></li></a>
+				</ul>
+			</div>	
 
 		</footer>
 
