SNSリンクを作成中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -684,9 +684,9 @@
 				</ul>
 
 				<ul class="sns_links">
-					<a href="" class="icon_a"><li><img src="./image/n_twitter.png" class="icon"><span class="sns_text">N高等学校公式<br>twitter</span></li></a>
-					<a href="" class="icon_a"><li><img src="./image/n_facebook.png" class="icon"><span class="sns_text">N高等学校公式<br>facebook</span></li></a>
-					<a href="" class="icon_a"><li><img src="./image/n_youtube.png" class="icon"><span class="sns_text">N高等学校公式<br>YouTubeチャンネル</span></li></a>
+					<li><a href=""><img src="./image/n_twitter.png" class="icon"><span class="sns_text">N高等学校公式<br>twitter</span></a></li>
+					<li><a href=""><img src="./image/n_facebook.png" class="icon"><span class="sns_text">N高等学校公式<br>facebook</span></a></li>
+					<li><a href=""><img src="./image/n_youtube.png" class="icon"><span class="sns_text">N高等学校公式<br>YouTubeチャンネル</span></a></li>
 				</ul>
 			</div>	
 
