コピーライト用のブロックを作成着手

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -688,8 +688,14 @@
 					<li><a href=""><img src="./image/n_facebook.png" class="icon"><span class="sns_text">N高等学校公式<br>facebook</span></a></li>
 					<li><a href=""><img src="./image/n_youtube.png" class="icon"><span class="sns_text">N高等学校公式<br>YouTubeチャンネル</span></a></li>
 				</ul>
-			</div>	
+			</div>
 
+		<!--*** コピーライトブロック***-->	
+			<div id="copyright_block">
+				<p class=""></p>
+				<p class=""></p>
+			</div>
+			
 		</footer>
 
 	</body>
