コピーライトのブロックを作成 ・文章の両端揃え

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -692,10 +692,12 @@
 
 		<!--*** コピーライトブロック***-->	
 			<div id="copyright_block">
-				<p class=""></p>
-				<p class=""></p>
+				<div class="copyright_text_area">
+					<p class="homeback"><a href="#n_school_header">N高等学校：ホーム</a></p>
+					<p class="copyright"><small>©︎ KADOKAWA DWANGO educational corporation</small></p>
+				</div>
 			</div>
-			
+
 		</footer>
 
 	</body>
