--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -570,20 +570,20 @@
 				<ul class="list_link">
 					<li id="footer_l_block_first"><a href=""><ruby>Advanced Program<rt>アドバンスト プログラム</rt></ruby></a></li>
 					<li class="list_link_first"><a href="">N予備校システム</a></li>
-						<li><a href="">大学受験</a></li>
-						<li><a href="">dwango×プログラミング</a></li>
-						<li><a href="">Dwango Media Village×機械学習</a></li>
-						<li><a href="">Webデザイン授業</a></li>
-						<li><a href="">KADOKAWA×文芸小説</a></li>
-						<li><a href="">電撃×エンタメ</a></li>
-						<li><a href="">Vantan×クリエイティブ</a></li>
-						<li><a href="">DTM・ボーカロイド授業</a></li>
-						<li><a href="">ものがたり創作授業</a></li>
-						<li><a href="">中学復習授業</a></li>
-						<li><a href="">企業、自治体、NPO×職業体験</a></li>
-						<li><a href="">N高マイプロジェクト</a></li>
-						<li><a href="">N高起業部</a></li>
-						<li><a href="">海外大学国際教育プログラム</a></li>
+					<li class="list_link_first"><a href="">大学受験</a></li>
+					<li class="list_link_first"><a href="">dwango×プログラミング</a></li>
+					<li class="list_link_first"><a href="">Dwango Media Village×機械学習</a></li>
+					<li class="list_link_first"><a href="">Webデザイン授業</a></li>
+					<li class="list_link_first"><a href="">KADOKAWA×文芸小説</a></li>
+					<li class="list_link_first"><a href="">電撃×エンタメ</a></li>
+					<li class="list_link_first"><a href="">Vantan×クリエイティブ</a></li>
+					<li class="list_link_first"><a href="">DTM・ボーカロイド授業</a></li>
+					<li class="list_link_first"><a href="">ものがたり創作授業</a></li>
+					<li class="list_link_first"><a href="">中学復習授業</a></li>
+					<li class="list_link_first"><a href="">企業、自治体、NPO×職業体験</a></li>
+					<li class="list_link_first"><a href="">N高マイプロジェクト</a></li>
+					<li class="list_link_first"><a href="">N高起業部</a></li>
+					<li class="list_link_first"><a href="">海外大学国際教育プログラム</a></li>
 				</ul>
 			</nav>
 
@@ -695,7 +695,6 @@
 					<p class="copyright"><small>©︎ KADOKAWA DWANGO educational corporation</small></p>
 				</div>
 			</div>
-
 		</footer>
 
 	</body>
