--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -356,8 +356,7 @@
 		<!--***先端企業が使用するITツールを高校時代から利用***-->
 		<section class="block_gray">
 			<div class="one_block">
-					<h2 class="basicprogram_heading">先端企業が使用するITツールを高校時代から利用</h2>
-						<div class="h2_border_bottom"></div>
+				<h2 class="ITtool_heading">先端企業が使用するITツールを高校時代から利用</h2>
 				<div class="info_block_left">
 					<a href="" class="nstandard_a">
 						<h2 class="bp_heading">
@@ -377,8 +376,7 @@
 		<!--***学校行事はネットとリアルで***-->
 		<section class="block_white">
 			<div class="one_block">
-				<h2 class="basicprogram_heading">学校行事はネットとリアルで</h2>
-					<div class="h2_border_bottom"></div>
+				<h2 class="school_event">学校行事はネットとリアルで</h2>
 				<img src="./image/school_events.png" alt="学校行事について" class="image_left">
 				<div class="info_block_right">
 						<a href="" class="nstandard_a">
@@ -398,8 +396,7 @@
 		<!--***N高起業部***-->
 		<section class="block_gray">
 			<div class="one_block">
-					<h2 class="basicprogram_heading">N高起業部</h2>
-						<div class="h2_border_bottom"></div>
+					<h2 class="n_startup_heading">N高起業部</h2>
 				<div class="info_block_left">
 					<a href="" class="nstandard_a">
 						<h2 class="bp_heading">
@@ -417,7 +414,7 @@
 		<!--***部活動***-->
 		<section class="block_white">
 			<div class="one_block">
-				<h2 class="basicprogram_heading">全国の仲間とともに活動する部活動</h2>
+				<h2 class="activity">全国の仲間とともに活動する部活動</h2>
 					<div class="h2_border_bottom"></div>
 				<img src="./image/club.png" alt="部活動について" class="image_left">
 				<div class="info_block_right">
@@ -437,8 +434,7 @@
 		</section>
 		<!--***ネットの高校は2つの入学コースが選べます***-->
 		<section class="basicprogram_info">
-				<h2 class="basicprogram_heading">ネットの高校は2つの入学コースが選べます</h2>
-					<div class="h2_border_bottom"></div>
+				<h2 class="two_cource">ネットの高校は2つの入学コースが選べます</h2>
 				<div class="BP_block">
 					<!--***ネットコースの説明***-->
 					<div class="info_block_left">
@@ -474,8 +470,7 @@
 		<!--***N高との提携スクール***-->
 		<section class="block_white">
 			<div class="one_block">
-				<h2 class="basicprogram_heading">より目的に特化したN高との提携スクール</h2>
-						<div class="h2_border_bottom"></div>
+				<h2 class="partnership_heading">より目的に特化したN高との提携スクール</h2>
 				<div class="info_block_left">
 					<a href="" class="nstandard_a">
 						<h2 class="bp_heading">
