・ヘッダーナビのリストにつく三角形の矢印 → 位置ずれするので、relateive absoluteの組合わせで固定 ・ヘッダーの追従ナビを作成中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -692,6 +692,18 @@
 			</div>
 		</footer>
 
+		<!--*** ヘッダー追従ブロック***-->	
+		<div id="header_fixed">
+			<ul class="fixed_nav">
+				<li class="left_fixed"><img src="./image/nschool_fixed_logo.png" alt="N高の追従ヘッダーロゴ"></li>
+				<li><img src="./image/fixed_tel.png" alt="ヘッダー追従リストの電話番号"></li>
+				<li><span class="fixed_info">受付時間<br>平日9:30〜20:00</span></li>
+				<li class="introduce_box_fixed"><a href="">説明会・相談会</a></li>
+				<li class="introduce_box_fixed"><a href="">資料請求</a></li>
+			</ul>
+		</div>
+						
+
 	</body>
 </html>
 
